force-app/main/default/objects/leaseworks__Project_Configuration__mdt/leaseworks__Project_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Campaign Configuration</label>
    <pluralLabel>Campaign Configurations</pluralLabel>
</CustomObject>