force-app/main/default/objects/leaseworks__Project_Configuration__mdt/fields/leaseworks__Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Type__c</fullName>
    <inlineHelpText>Asset Type value to be used on new Deals created automatically by this module. Should be one of the possible values in that picklist on the Deal object.</inlineHelpText>
    <label>Default Asset Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>