force-app/main/default/objects/leaseworks__Project_Configuration__mdt/fields/leaseworks__Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deal_Status__c</fullName>
    <inlineHelpText>Deal Status value to be used on new Deals created automatically by this module. Should be one of the possible values in that picklist on the Deal object.</inlineHelpText>
    <label>Default Deal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>