force-app/main/default/objects/leaseworks__Project_Configuration__mdt/fields/leaseworks__Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deal_Type__c</fullName>
    <inlineHelpText>Used to link this configuration record to one of the different Deal Type values in the Campaign =&gt; must be a value from Deal Type picklist on Campaign.
For clarity, please use same name for &quot;Custom Metadata Record Name&quot;, &quot;Label&quot; and &quot;Campaign Deal Type&quot;.</inlineHelpText>
    <label>Campaign Deal Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>