force-app/main/default/objects/leaseworks__Project_Configuration__mdt/fields/leaseworks__Default_Bid_Field__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Default_Bid_Field__c</fullName>
    <description>Currency field to be used on Bid Matrix (case sensitive).</description>
    <inlineHelpText>Currency field from those existing in &quot;Assets in Deal&quot; object to be used on the Bid Matrix. Use API name (case sensitive).</inlineHelpText>
    <label>Default Bid Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>