force-app/main/default/objects/leaseworks__Project_Configuration__mdt/fields/leaseworks__Field_for_Gain_Loss_calculation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Field_for_Gain_Loss_calculation__c</fullName>
    <description>Add API of the currency field on the Asset object to be used for Gain/Loss calculation. If left blank, the system will use Accounting Book Value from Asset for the calculation.</description>
    <inlineHelpText>Add API of the currency field on the Asset object to be used for Gain/Loss calculation. If left blank, the system will use Accounting Book Value from Asset for the calculation.</inlineHelpText>
    <label>Field for Gain/Loss calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>