force-app/main/default/objects/leaseworks__Project_Configuration__mdt/fields/leaseworks__Marketing_Activity_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Marketing_Activity_Deal_Type__c</fullName>
    <inlineHelpText>Deal Type value to be used for new Deals created automatically by this module.</inlineHelpText>
    <label>Deal Type for new Deals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>