force-app/main/default/objects/leaseworks__Project_Configuration__mdt/fields/leaseworks__Marketing_Activity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Marketing_Activity_Record_Type__c</fullName>
    <description>Deal record type developer name (case sensitive).</description>
    <inlineHelpText>Record Type for new Deals and &quot;Assets in Deal&quot; records automatically created from this module. Use API name (case sensitive), and it must be a valid record type for BOTH the Deal and the &quot;Assets in Deal&quot; objects (record types must be aligned).</inlineHelpText>
    <label>Record Type for new Deals</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>