force-app/main/default/objects/leaseworks__Project_Configuration__mdt/fields/leaseworks__Override_Bid_with__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Override_Bid_with__c</fullName>
    <description>To override the bid field display in the bid matrix UI with a specific Campaign Status, set the  Campaign Status here.</description>
    <inlineHelpText>To override the bid field display in the bid matrix UI with a specific Campaign Status, set the  Campaign Status here.</inlineHelpText>
    <label>Override Bid field display with</label>
    <length>50</length>
    <type>Text</type>
</CustomField>