force-app/main/default/objects/leaseworks__Project_Configuration__mdt/fields/leaseworks__Show_Gain_Loss_on_Sale__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Show_Gain_Loss_on_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to show or hide the calculation &quot;Gain/(Loss) on Sale&quot; on the first column of the Bid Matrix. Only meaningful for Sales, and depending on the client not even that (if Accounting Book Value, used for the calculation, has no value for assets).</inlineHelpText>
    <label>Show Gain/Loss on Sale</label>
    <type>Checkbox</type>
</CustomField>